@@ -185,14 +185,13 @@ def user_query_website(user_text):
         return rmessage
 
     # 提取創建時間和最後更新時間
-
     today = datetime.today().date()  # 取得當天日期
     if isinstance(w.creation_date, list):
-        creation_date = min(w.creation_date).strftime('%Y-%m-%d %H:%M:%S')
-        diff_days = (today - min(w.creation_date).date()).days  # 相差幾天
+        creation_date = min(w.creation_date)
     else:
-        creation_date = w.creation_date.strftime('%Y-%m-%d %H:%M:%S')
-        diff_days = (today - w.creation_date.date()).days  # 相差幾天
+        creation_date = w.creation_date
+    diff_days = (today - creation_date.date()).days  # 相差幾天
+    creation_date = creation_date.strftime('%Y-%m-%d %H:%M:%S')  # 轉換成字串
 
     #logger.info("Website : " + user_text)
     #logger.info("Create Date : " + creation_date)
